fixing cover image on mobile

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2244,6 +2244,7 @@
                                 background-repeat: no-repeat;
                                 height: 100%;
                                 min-width: 20rem;
+                                min-height: -webkit-fill-available;
                                 color: black;
 			}
 
@@ -2986,7 +2987,7 @@
 			}
 
 			.panel .span-7 {
-				width: 100%;
+				width: auto;
 			}
 
 			.panel .span-7-25 {
